--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "child_process": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
+    "next-themes": "^0.4.6",
+    "node-os-utils": "^2.0.1",
+    "os-utils": "^0.0.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "systeminformation": "^5.27.11",
